App and Router file settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,13 @@
     "compilerOptions": {
         "outDir": "app/build",
         "target": "ES6",
+        "module": "CommonJS",
         "noEmitOnError": true,
         "noImplicitAny": true,
         "removeComments": true,
         "strictNullChecks": true,
-        "esModuleInterop": true
-    }
+        "esModuleInterop": true,
+        "moduleResolution": "NodeNext"
+    },
+    "include": ["app/src/**/*"]
 }
