--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "countries-api",
   "version": "1.0.0",
   "description": "An api to get countries of the world",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "tsc",
-    "watch" : "tsc -w" 
+    "start": "tsc",
+    "watch": "tsc -w"
   },
   "author": "Kleverton",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "typescript": "^4.9.4"
   },
