--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.8.2",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
