--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Kleverton",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "axios": "^1.2.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
