--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc",
+    "build" : "tsc",
+    "start": "node ./app/build/index.js",
     "watch": "tsc -w"
   },
   "author": "Kleverton",
