--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "tsc",
+    "build": "tsc",
     "start": "node ./app/build/index.js",
     "watch": "tsc -w"
   },
@@ -21,6 +21,7 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.15"
+    "@types/express": "^4.17.15",
+    "nodemon": "^2.0.20"
   }
 }
